# trial-voicevox

./: .gitignore  README.md  compose.yaml  workspace.code-workspace
vox-server/: Dockerfile  README.md  hello.py  mypy.ini  pyproject.toml  ruff.toml  sample.py
vox-server/src/: logging.ini  main.py  sample.py  settings.py
vox-server/src/internal/: synthesizer.py
vox-server/src/routes/: heartbeat.py  vox.py
vox-server/src/schemas/: heartbeat.py  vox.py
vox-server/voicevox_core/onnxruntime/: third-party-notices.html
