[project]
name = "vox-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "voicevox-core",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.7",
]

[tool.uv.sources]
voicevox-core = { url = "https://github.com/VOICEVOX/voicevox_core/releases/download/0.16.0/voicevox_core-0.16.0-cp310-abi3-macosx_11_0_arm64.whl" }
