[project]
name = "vox-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "voicevox-core",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "poethepoet>=0.34.0",
    "ruff>=0.11.7",
]

[tool.uv.sources]
voicevox-core = [
  { url = "https://github.com/VOICEVOX/voicevox_core/releases/download/0.16.0/voicevox_core-0.16.0-cp310-abi3-macosx_11_0_arm64.whl", marker = "platform_system == 'Darwin'" },
  { url = "https://github.com/VOICEVOX/voicevox_core/releases/download/0.16.0/voicevox_core-0.16.0-cp310-abi3-manylinux_2_34_x86_64.whl", marker = "platform_system != 'Darwin'" },
]

#### Poe the Poet Defining tasks ####
# https://poethepoet.natn.io/tasks/index.html

[tool.poe.tasks.format]
help = "Run ruff format"
cmd = "ruff format ."

[tool.poe.tasks.format-fix]
help = "Run ruff format --fix"
cmd = "ruff format . --fix"

[tool.poe.tasks.ruff-lint]
help = "Run ruff lint"
cmd = "ruff check ."

[tool.poe.tasks.mypy-lint]
help = "Run mypy lint"
cmd = "mypy ."

[tool.poe.tasks.lint]
help = "Run lint all"
sequence = ["format", "ruff-lint", "mypy-lint"]
